--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,7 @@ pygame==2.6.0
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+python_version >=3.7,<3.11
 pytube==15.0.0
 pytz==2024.2
 pywinpty==2.0.13
